testData/inspections/relativeEntry/quickFix2.gitignore
<error descr="'foo/../bar' entry contains relative path">foo<caret>/../bar</error>